--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <script src="assets/script.js" defer></script>
 </head>
 <body>
-    <h1></h1>
+    <div id="app">
+        <h1 >{{welcome}}</h1>
+        <img :src= "img"  alt="">
+       
+    </div>
+    
 </body>
 </html>
