--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue-Hello</title>
+    <link rel="stylesheet" href="assets/style.css">
     <script src="https://unpkg.com/vue@3/dist/vue.global.js" defer></script>
     <script src="assets/script.js" defer></script>
 </head>
